monitoring/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    k8s-3tier-webapp: grafana
spec:
  rules:
  - host: grafana.minikube
    http:
      paths:
      - path:
        backend:
          serviceName: grafana
          servicePort: 3000
